--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 773px;
     display: flex;
-    background: url("/public/img/banner.webp");
+    background: url("/public/img/banner.jpg");
     background-size: cover;
   }
 
@@ -152,7 +152,7 @@
   .home-navbar .navbar-container .logo-frame .logo-img {
     width: 100%;
     height: 100%;
-    background: url("/public/img/logo.webp");
+    /* background: url("/public/img/logo.webp"); */
     background-size: contain;
     background-repeat: no-repeat;
     filter: invert(25%);
@@ -168,7 +168,7 @@
     width: 100%;
     height: 400px;
     display: flex;
-    background: url("/public/img/banner.webp");
+    background: url("/public/img/banner2.jpg");
     background-size: cover;
   }
 
