--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,9 +3,13 @@
   font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 20px;
   line-height: 34px;
-  color: #e3c08d;
+  color: #ffffff;
+}
+
+.nonik {
+  color: #ffffff;
 }
 
 .sns-context {
@@ -23,7 +27,7 @@
   font-weight: 600;
   font-size: 24px;
   line-height: 34px;
-  color: #c5c8c9;
+  color: #ffffff;
 }
 
 .foot-category-link {
@@ -41,7 +45,7 @@
 }
 
 .foot-category-link a {
-  color: #e3c08d;
+  color: #ffffff;
   text-decoration: none;
   cursor: pointer;
 }
@@ -67,7 +71,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 34px;
-  color: #e3c08d;
+  color: #ffffff;
 }
 
 .copyright-txt {
@@ -77,13 +81,13 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 34px;
-  color: #e3c08d;
+  color: #ffffff;
 }
 
 .foot-category-title:after {
   display: block;
   content: "";
-  border-bottom: solid 2px #d7b686;
+  border-bottom: solid 2px #ffffff;
   transform: scaleX(0);
   transition: transform 250ms ease-in-out;
   transform-origin: 0% 50%;
