--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,8 +1,8 @@
 .home-navbar {
     width: 100%;
-    height: 773px;
+    height: 750x;
     display: flex;
-    background: url("/public/img/banner.jpg");
+    background: url("/public/img/banner.png");
     background-size: cover;
   }
 
