--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -22,7 +22,7 @@
     background-color: ;
   }
 
-  .home-navbar .navbar-container .menu .nonik-logo {
+.nonik-logo {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
   font-size: 36px;
@@ -116,6 +116,17 @@
     color: #f8f8ff;
   }
 
+  @keyframes slideInRightToLeft {
+  from {
+    opacity: 0;
+    transform: translateX(100vw); /* Ekran o‘ng chetidan boshlaydi */
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0); /* O‘z joyiga silliq kiradi */
+  }
+}
+
   .home-navbar .navbar-container .header-frame .detail .wel-txt {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
@@ -124,25 +135,53 @@
   letter-spacing: 0;
   text-align: right;
   color: #FFFFFF;
+  opacity: 0;
+  animation: slideInRightToLeft 0.8s ease-out forwards;
+  animation-delay: 0.1s;
 }
 
-  
+@keyframes flyInFromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-30vw);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
   .home-navbar .navbar-container .header-frame .detail .service-txt {
   font-family: 'Playfair Display', serif;
   font-weight: 400;
-  font-size: 19px;
+  font-size: 23px;
   line-height: 19px;
   letter-spacing: 0;
   text-align: right;
   color: #FFFFFF;
   margin-top: 5px;
+  opacity: 0;
+  animation: flyInFromLeft 0.6s ease-out forwards;
 }
 
+@keyframes slideInFromTop {
+  from {
+    opacity: 0;
+    transform: translateY(-100px); /* 100px tepada boshlaydi */
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0); /* O‘z joyiga tushadi */
+  }
+}
   
   .home-navbar .navbar-container .detail .signup {
     margin-top: 90px;
     display: flex;
   justify-content: flex-end; /* tugma o‘ng tomonga chiqadi */
+  opacity: 0;
+  animation: slideInFromTop 0.7s ease-out forwards;
+  animation-delay: 0.2s;
   }
   
   .home-navbar .navbar-container .detail .signup .signup-button {
