--- a/src/css/products.css
+++ b/src/css/products.css
@@ -11,7 +11,8 @@
   width: 100%;
   height: auto;
   display: flex;
-  background: #f8f8ff;
+  background: #ececfe;
+  filter:  brightness(90%);
   display: flex;
   flex-direction: column;
 }
@@ -420,7 +421,7 @@
 .products-page .products .address {
   margin-bottom: 60px;
   height: auto;
-  background: #f8f8ff;
+  background: #ececfe;
 }
 
 .products-page .products .address .address-area {
