--- a/src/css/products.css
+++ b/src/css/products.css
@@ -57,7 +57,7 @@
   align-items: center;
   background: #fffcfc;
   border: 1px solid #f8f8ff;
-  box-shadow: 0px 4px 4px rgba(213, 213, 213, 0.25);
+  box-shadow: 0px 4px 4px rgba(3, 99, 255, 0.25);
   border-radius: 18.5px;
   box-sizing: border-box;
 }
@@ -349,7 +349,7 @@
   font-weight: 700;
   font-size: 36px;
   line-height: 43px;
-  color: #d7b686;
+  color: #df6cff;
 }
 
 .products-page .products .brands-logo .review-box {
@@ -549,6 +549,8 @@
   flex-direction: row;
 
   
+
+  
 }
 
 
@@ -556,7 +558,7 @@
   display: flex;
   flex-direction: column;
   justify-content:flex-start;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   align-items: center;
   height:fit-content;
   margin-top: 40px;
