--- a/src/css/orders.css
+++ b/src/css/orders.css
@@ -1,7 +1,8 @@
 .order-page {
     width: 100%;
     height: auto;
-    background: #f8f8ff;
+    background: #ececfe;
+    filter:  brightness(90%);
     display: flex;
   }
   
@@ -10,6 +11,7 @@
     margin-bottom: 50px;
     display: flex;
     flex-direction: row;
+
   }
   
   .order-page .order-left {
