--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,10 +1,9 @@
 .home-navbar {
     width: 100%;
-    height: 900px;
+    height: 750px;
     display: flex;
     background: url("/public/img/banner.png");
-    background-size: cover;
-    background-position: center bottom;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
   }
 
@@ -19,7 +18,6 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: ;
   }
 
 .nonik-logo {
