--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 750px;
     display: flex;
-    background: url("/public/img/banner.png");
+    background: url("/public/img/bannerr.png");
     background-size: 100% 100%;
     background-repeat: no-repeat;
   }
